--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.94daefd414b8355106ab.js" defer></script><script src="main.40bb9415ee2ce6a370b5.js" defer></script></body>
+<script src="/pwademo/runtime.7b63b9fd40098a2e8207.js" defer></script><script src="/pwademo/polyfills.94daefd414b8355106ab.js" defer></script><script src="/pwademo/main.40bb9415ee2ce6a370b5.js" defer></script></body>
 
 </html>
